# flua

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/flua/: __init__.py  constants.py  display.py  encoding.py  io.py  ml.py  models.py  products.py  seq_utils.py
tests/: conftest.py  test_encoding.py  test_io.py  test_ml.py  test_models.py  test_seq_utils.py
